<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tela2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questaop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questao1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:text="@string/branco"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:text="@string/preto"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:text="@string/marrom"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9A4DA7"
            android:gravity="center"
            android:text="@string/cinza"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>