<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tela5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/geografia" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/questaog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questaog"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9A4DA7"
                android:text="@string/ga"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9A4DA7"
                android:text="@string/gb"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9A4DA7"
                android:text="@string/gc"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#9A4DA7"
                android:gravity="center"
                android:text="@string/gd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>