<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3C41"
    android:backgroundTint="#3F3C41"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Tela1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/escolha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Em qual matéria você deseja testar seus conhecimentos?"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/portugues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/portugues"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/matematica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:gravity="center"
            android:text="@string/matematica"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quimica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:gravity="center"
            android:text="@string/quimica"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/geografia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:gravity="center"
            android:text="@string/geografia"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/todas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#9A4DA7"
            android:gravity="center"
            android:text="@string/todas"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>